--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,26 @@
-# The URL the site will be built for
-base_url = "https://caffeine-bear.github.io"
+title = "Zola ʕ•ᴥ•ʔ Bear Blog"
+base_url = "https://zola-bearblog.netlify.app/"
+description = "A Zola-theme based on Bear Blog."
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = true
+compile_sass = false
 
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
+
+taxonomies = [
+  {name = "categories", feed = true},
+  {name = "tags", feed = true},
+]
+
+default_language = "en"
+
+[translations]
+no_posts = "No posts yet"
+remove_filter = "Remove filter"
+filtering_for = "Filtering for"
+made_with = "Made with"
+
 
 [markdown]
 # Whether to do syntax highlighting
@@ -13,4 +28,26 @@ build_search_index = false
 highlight_code = true
 
 [extra]
-# Put all your custom variables here
+date_format="%d %b, %Y"
+webserver_sends_csp_headers=true
+language_switcher=true
+
+translations = [
+  { code="en", name="English" },
+]
+
+[[extra.main_menu]]
+name = "Home"
+url = "/"
+
+[[extra.main_menu]]
+name = "idkkk"
+url = "@/bear.md"
+
+[[extra.main_menu]]
+name = "Zola"
+url = "@/zola.md"
+
+[[extra.main_menu]]
+name = "Blog"
+url = "@/blog/_index.md"
